# curse-defense

./: .gitignore  README.md  pyproject.toml
curse-defense/: __init__.py
scripts/: curse_defense  sample.py
src/curse_defense/backdoor_fed/: __init__.py  models.py
